--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		<meta name="keywords" content="стоматолог, пародонтолог, лечение десен, имплантация, зубы, Москва">
 		<link rel="manifest" href="./files/manifest.json">
 		<title>Наам Константин Владимирович | Стоматолог-пародонтолог</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757263632972"></script>
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1757264195702"></script>
 		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757263632972">
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757263632972">
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757264195702">
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757264195702">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -42,7 +42,9 @@
 					<!-- <include src="@components/layout/menu/menu.html" locals='{"active":"Home"}'></include> -->
 					<div class="header__logo">
 						<a href="index.html">
-							<img src="./assets/img/logo.png" width="206" alt="Логотип Наам К.В.">
+							<picture>
+								<img width="206" alt="Логотип Наам К.В." src="./assets/img/logo.webp">
+							</picture>
 						</a>
 					</div>
 					<div class="header__menu menu">
@@ -112,10 +114,20 @@
 				<div class="page__container">
 					<div class="page__item item__first">
 						<div class="item__photo photo__main">
-							<img src="./assets/img/main/Photo-naam-1.png" width="200" alt="Наам К.В." loading="lazy">
+							<picture>
+								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-1-450.webp" type="image/webp">
+								<source media="(max-width: 600px)" srcset="./assets/img/main/Photo-naam-1-600.webp" type="image/webp">
+								<source media="(max-width: 1200px)" srcset="./assets/img/main/Photo-naam-1-1200.webp" type="image/webp">
+								<img width="200" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-1.webp">
+							</picture>
 						</div>
 						<div class="item__logo">
-							<img src="./assets/img/main/logo.png" width="300" alt="Логотип Наам К.В." loading="lazy">
+							<picture>
+								<source media="(max-width: 450px)" srcset="./assets/img/main/logo-450.webp" type="image/webp">
+								<source media="(max-width: 600px)" srcset="./assets/img/main/logo-600.webp" type="image/webp">
+								<source media="(max-width: 1200px)" srcset="./assets/img/main/logo-1200.webp" type="image/webp">
+								<img width="300" alt="Логотип Наам К.В." loading="lazy" src="./assets/img/main/logo.webp">
+							</picture>
 						</div>
 						<div class="item__tagline"></div>
 						<div class="item__text text__about">
@@ -167,7 +179,10 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<img src="./assets/img/main/dip.png" width="70" alt="Диплом об окончании Пермской государственной медицинской академи" loading="lazy">
+							<picture>
+								<source media="(max-width: 450px)" srcset="./assets/img/main/dip-450.webp" type="image/webp">
+								<img width="70" alt="Диплом об окончании Пермской государственной медицинской академи" loading="lazy" src="./assets/img/main/dip.webp">
+							</picture>
 						</div>
 						<div class="item__text">
 							<p>
@@ -194,7 +209,10 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<img src="./assets/img/main/Photo-naam-2.jpg" width="70" alt="Наам К.В." loading="lazy">
+							<picture>
+								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-2-450.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-2.webp">
+							</picture>
 						</div>
 						<div class="item__text">
 							<p>
@@ -217,7 +235,10 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<img src="./assets/img/main/love_tuymen.jpg" width="70" alt="Наам К.В." loading="lazy">
+							<picture>
+								<source media="(max-width: 450px)" srcset="./assets/img/main/love_tuymen-450.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/love_tuymen.webp">
+							</picture>
 						</div>
 						<div class="item__text">
 							<p>
@@ -234,7 +255,10 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<img src="./assets/img/main/Photo-naam-3.jpg" width="70" alt="Наам К.В." loading="lazy">
+							<picture>
+								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-3-450.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-3.webp">
+							</picture>
 						</div>
 						<div class="item__text">
 							<p>
@@ -253,7 +277,10 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<img src="./assets/img/main/Photo-naam-4.jpg" width="70" alt="Наам К.В." loading="lazy">
+							<picture>
+								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-4-450.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-4.webp">
+							</picture>
 						</div>
 						<div class="item__text">
 							<p>
@@ -273,7 +300,10 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<img src="./assets/img/main/Photo-naam-5.jpg" width="70" alt="Наам К.В." loading="lazy">
+							<picture>
+								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-5-450.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-5.webp">
+							</picture>
 						</div>
 						<div class="item__text">
 							<p>
@@ -291,7 +321,10 @@
 					</div>
 					<div class="page__item">
 						<div class="item__photo">
-							<img src="./assets/img/main/Photo-naam-6.jpg" width="70" alt="Наам К.В." loading="lazy">
+							<picture>
+								<source media="(max-width: 450px)" srcset="./assets/img/main/Photo-naam-6-450.webp" type="image/webp">
+								<img width="70" alt="Наам К.В." loading="lazy" src="./assets/img/main/Photo-naam-6.webp">
+							</picture>
 						</div>
 						<div class="item__text">
 							<p>
